--- a/WouldYouRather/WouldYouRather.csproj
+++ b/WouldYouRather/WouldYouRather.csproj
@@ -14,6 +14,8 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.3" />
     </ItemGroup>
 
     <ItemGroup>
