--- a/WouldYouRather/WouldYouRather.csproj
+++ b/WouldYouRather/WouldYouRather.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.3" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.3" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.4.0" />
     </ItemGroup>
 
     <ItemGroup>
