Set up docker config and get some of that setup working

--- a/WouldYouRather/Properties/launchSettings.json
+++ b/WouldYouRather/Properties/launchSettings.json
@@ -3,8 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:20494",
-      "sslPort": 44352
+      "applicationUrl": "http://localhost:5001"
     }
   },
   "profiles": {
@@ -13,8 +12,7 @@
       "launchBrowser": false,
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "PG_CONN_STR": ""
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
   }
