--- a/WouldYouRather/Dockerfile
+++ b/WouldYouRather/Dockerfile
@@ -1,18 +1,22 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build-env
-WORKDIR /app
+# https://hub.docker.com/_/microsoft-dotnet
+FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
+WORKDIR /source
 
-COPY *.csproj ./
+# copy csproj and restore as distinct layers
+COPY *.csproj .
 RUN dotnet restore
 
 RUN apt-get update -yq \
     && apt-get install curl gnupg -yq \
-    && curl -sL https://deb.nodesource.com/setup_10.x | bash \
-    && apt-get install nodejs -yq
+    && curl -sL https://deb.nodesource.com/setup_16.x | bash \
+    && apt-get install nodejs -yq && npm install -g @angular/cli
 
+# copy and publish app and libraries
 COPY . ./
-RUN dotnet publish -c Release -o out
+RUN dotnet publish -c release -o /app --no-restore
 
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
+# final stage/image
+FROM mcr.microsoft.com/dotnet/runtime:5.0
 WORKDIR /app
-COPY --from=build-env /app/out .
+COPY --from=build /app .
 ENTRYPOINT ["dotnet", "WouldYouRather.dll"]
