--- a/WouldYouRather/ClientApp/tsconfig.app.json
+++ b/WouldYouRather/ClientApp/tsconfig.app.json
@@ -5,7 +5,8 @@
     "types": []
   },
   "include": [
-    "src/**/*.ts"
+    "src/main.ts",
+    "src/polyfills.ts"
   ],
   "exclude": [
     "src/test.ts",
