Commit changes trying to get docker to work

--- a/WouldYouRather/Dockerfile
+++ b/WouldYouRather/Dockerfile
@@ -2,17 +2,17 @@
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /source
 
-# copy csproj and restore as distinct layers
-COPY *.csproj .
-RUN dotnet restore
-
 RUN apt-get update -yq \
     && apt-get install curl gnupg -yq \
     && curl -sL https://deb.nodesource.com/setup_16.x | bash \
-    && apt-get install nodejs -yq && npm install -g @angular/cli
+    && apt-get install nodejs -yq && npm install -g @angular/cli@9 && npm install -g @ionic/cli
+
+# copy csproj and restore as distinct layers
+COPY *.csproj .
+RUN dotnet restore --no-cache
 
 # copy and publish app and libraries
-COPY . ./
+COPY . .
 RUN dotnet publish -c release -o /app --no-restore
 
 # final stage/image
