--- a/WouldYouRather/ClientApp/package.json
+++ b/WouldYouRather/ClientApp/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
+  "main":  "src/main.ts",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
